3D View turns into a Image Editor after saving render result #44976

Closed
opened 2015-06-06 08:20:47 +02:00 by Mikhail Rachinskiy · 8 comments

System Information
Windows 8.1 x64
Renderer: GeForce GTX 860M/PCIe/SSE2

Blender Version
Broken: 2.74.5 94e7ac5

Short description of error
After saving render result 3D View permanently turns into a Image Editor.

Exact steps for others to reproduce the error

  • Open Blender with factory settings
  • Change RenderDisplay to Full Screen
  • Made OpenGL render (or hit F12)
  • Save result into file (F3)

Press Escape—see how 3D View is no longer a 3D View, pressing Esc more times does not help

**System Information** Windows 8.1 x64 Renderer: GeForce GTX 860M/PCIe/SSE2 **Blender Version** Broken: 2.74.5 94e7ac5 **Short description of error** After saving render result `3D View` permanently turns into a `Image Editor`. **Exact steps for others to reproduce the error** - Open Blender with factory settings - Change `Render` → `Display` to `Full Screen` - Made OpenGL render (or hit F12) - Save result into file (F3) # Press Escape—see how `3D View` is no longer a `3D View`, pressing Esc more times does not help
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @MikhailRachinskiy

Added subscriber: @MikhailRachinskiy
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

This comment was removed by @JulianEisel

*This comment was removed by @JulianEisel*
Julian Eisel self-assigned this 2015-06-06 12:03:08 +02:00
Author
Member

This comment was removed by @MikhailRachinskiy

*This comment was removed by @MikhailRachinskiy*
Campbell Barton changed title from 3D View turns into a Text Editor after saving render result to 3D View turns into a Image Editor after saving render result 2015-06-08 13:53:07 +02:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This issue was referenced by 4f94947157

This issue was referenced by 4f9494715719d563d7f45210e45aa3056535a09b
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44976
No description provided.