Fix T44976: 3D View turns into an Image Editor after saving render result

Was a case of two stacked temporary fullscreens, so a quite extreme
situation.