source/blender/editors/screen/screen_ops.c
@@ -3800,7 +3800,7 @@ static int fullscreen_back_exec(bContext *C, wmOperator *op)
 		return OPERATOR_CANCELLED;
 	}
 
-	ED_screen_full_prevspace(C, sa);
+	ED_screen_full_prevspace(C, sa, false);
 
 	return OPERATOR_FINISHED;
 }
